reverted dataTables date wrapping because of bugs it introduces

--- a/web/css/style.less
+++ b/web/css/style.less
@@ -252,12 +252,6 @@ select {
     display: none;
 }
 
-.dataTable {
-    tbody {
-        white-space: nowrap;
-    }
-}
-
 .btn {
     vertical-align: middle;
     padding: 15px 15px 15px 15px;
